--- a/src/components/PortfolioList/styles.scss
+++ b/src/components/PortfolioList/styles.scss
@@ -1,18 +1,8 @@
-.portfolioList {
+#portfolioList {
   padding: 10px;
-
-  li {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-
   h1 {
+    font-size: 16;
     text-transform: uppercase;
-    font-size: 16px;
-  }
-
-  p {
-    font-size: 12px;
+    padding-bottom: 10px;
   }
 }
