--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,24 @@
 @import 'sass/normalize';
 
 body {
-  font-family: Arial;
+  font: 14px Arial;
+}
+
+input {
+  display: block;
+  color: #666;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+}
+
+input.inValid {
+  border-color: #f00;
+}
+
+label {
+  color: #999;
+  font-size: 11px;
+  line-height: 11px;
+  display: block;
+  padding-bottom: 3px;
 }
