--- a/src/components/AdminListItem/styles.scss
+++ b/src/components/AdminListItem/styles.scss
@@ -1,6 +1,13 @@
-#adminList__item {
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
-  padding: 10px;
-  cursor: pointer;
+#adminList {
+
+  &__item {
+    border: 1px solid #ccc;
+    border-top: 0px;
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  &__item:first-child {
+    border-top: 1px solid #ccc;
+  }
 }
