--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -1,7 +1,8 @@
 button {
-    padding: 5px 10px 6px;
-    border-radius: 3px;
-    background-color: #777;
-    color: #fff;
-    font-size: 14px;
+  padding: 5px 10px 6px;
+  border-radius: 3px;
+  background-color: #777;
+  color: #fff;
+  font-size: 14px;
+  cursor: pointer;
 }
