css and html to match prod

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: DinAlternateLight;
-  src: url("/font/din_alternate_light-webfont.eot");
-  src: url("/font/din_alternate_light-webfont.eot?#iefix") format("embedded-opentype"), 
-       url("/font/din_alternate_light-webfont.woff") format("woff"), 
-       url("/font/din_alternate_light-webfont.ttf") format("truetype"), 
-       url("/font/din_alternate_light-webfont.svg#DinAlternateLight") format("svg");
+  src: url("./assets/font/din_alternate_light-webfont.eot");
+  src: url("./assets/font/din_alternate_light-webfont.eot?#iefix") format("embedded-opentype"), 
+       url("./assets/font/din_alternate_light-webfont.woff") format("woff"), 
+       url("./assets/font/din_alternate_light-webfont.ttf") format("truetype"), 
+       url("./assets/font/din_alternate_light-webfont.svg#DinAlternateLight") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@ body, html {
 }
 
 body {
-  background: white url(/img/site/bg45.jpg);
+  background: white url('./assets/img/site/bg45.jpg');
   font-size: 10px;
 }
 
@@ -69,687 +69,3 @@ article h3 {
   margin: 5px 0;
 }
 
-/* SLIDER NAV */
-#sliderNav {
-  display: none;
-  background-color: #000;
-  position: fixed;
-  top: 90px;
-  left: 0;
-}
-
-#sliderNav a {
-  display: block;
-  width: 30px;
-}
-
-#sliderNav a:hover {
-  display: block;
-  background-color: #ff6f6f;
-}
-
-#lastSection {
-  height: 25px;
-  background: url("/img/site/arrow_up.gif") center center no-repeat;
-}
-
-#topSection {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 10px;
-  text-align: center;
-  padding: 5px 0;
-  color: #fff;
-  border-top: 1px solid #666666;
-  border-bottom: 1px solid #666666;
-}
-
-#nextSection {
-  height: 25px;
-  background: url("/img/site/arrow_down.gif") center center no-repeat;
-}
-
-/* TOP NAV */
-header {
-  padding-top: 20px;
-}
-
-nav {
-  padding: 25px 15px 10px 15px;
-  background-color: #fff;
-  float: left;
-  margin-bottom: 25px;
-}
-
-nav ul {
-  overflow: hidden;
-  width: auto;
-}
-
-nav li {
-  float: left;
-  padding-left: 15px;
-}
-
-nav li:first-child {
-  padding-left: 0;
-}
-
-nav li a {
-  font-family: DinAlternateLight;
-  font-size: 30px;
-  letter-spacing: -.07em;
-}
-
-nav li a:hover {
-  color: #ff6f6f;
-}
-
-#date {
-  padding-top: 5px;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 12px;
-  color: #333333;
-}
-
-#logoWrapper {
-  clear: left;
-  overflow: hidden;
-  margin-bottom: 20px;
-  position: relative;
-}
-
-@-webkit-keyframes slideup {
-  0% {
-    top: 200px;
-  }
-
-  100% {
-    top: 0;
-  }
-}
-
-@-moz-keyframes slideup {
-  0% {
-    top: 200px;
-  }
-
-  100% {
-    top: 0;
-  }
-}
-
-@-o-keyframes slideup {
-  0% {
-    top: 200px;
-  }
-
-  100% {
-    top: 0;
-  }
-}
-
-@keyframes slideup {
-  0% {
-    top: 200px;
-  }
-
-  100% {
-    top: 0;
-  }
-}
-
-.cssanimations #logo {
-  width: 100%;
-  max-width: 647px;
-  position: relative;
-  top: 200px;
-  -webkit-animation-delay: 1s;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-name: slideup;
-  -webkit-animation-timing-function: ease;
-  -webkit-animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
-  -moz-animation-delay: 1s;
-  -moz-animation-duration: 1s;
-  -moz-animation-name: slideup;
-  -moz-animation-timing-function: ease;
-  -moz-animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
-  -o-animation-delay: 1s;
-  -o-animation-duration: 1s;
-  -o-animation-name: slideup;
-  -o-animation-timing-function: ease;
-  -o-animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
-  animation-delay: 1s;
-  animation-duration: 1s;
-  animation-name: slideup;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
-}
-
-/* CONTENT */
-#contentWrapper {
-  padding: 0 15px;
-  position: relative;
-}
-
-#contentWrapper > article {
-  background-color: #fff;
-  padding: 30px 20px;
-  border-bottom: 5px solid black;
-}
-
-#connectWrapper {
-  border-bottom: 0 !important;
-}
-
-/* ABOUT */
-#aboutDetail {
-  overflow: auto;
-  width: auto;
-}
-
-#aboutDetail h5 {
-  padding-top1: 10px;
-  font-size: 20px;
-}
-
-#aboutDetail p {
-  color: #666666;
-  padding-top: 5px;
-}
-
-#aboutDetail div {
-  float: left;
-}
-
-#aboutDetailTxt {
-  width: 30%;
-  max-width: 390px;
-}
-
-#aboutDetailImg {
-  float: left;
-  width: 70%;
-  max-width: 668px;
-}
-
-#aboutDetailImg img {
-  width: 100%;
-}
-
-@media only screen and (max-width: 900px) {
-  #aboutDetail div {
-    float: none;
-    width: 100%;
-  }
-
-  #aboutDetailTxt {
-    max-width: 100%;
-  }
-
-  #aboutDetailImg {
-    padding-top: 10px;
-  }
-}
-@media only screen and (max-width: 600px) {
-  #aboutDetailImg {
-    display: none;
-  }
-}
-/* PORTFOLIO */
-#portfolioWrapper {
-  padding-right: 5px !important;
-}
-
-#portfolio {
-  padding-top: 5px;
-}
-
-#portfolioNav li {
-  float: left;
-  padding-left: 10px;
-}
-
-#portfolioNav li:first-child {
-  padding-left: 0;
-}
-
-#portfolioNav li a {
-  display: block;
-  color: #fff;
-  font-size: 11px;
-  background-color: #000;
-  padding: 5px 10px;
-}
-
-#portfolioNav li a:hover {
-  color: #333333;
-  background-color: #ff6f6f;
-}
-
-#portfolioThumbnail {
-  padding-top: 20px;
-  overflow: hidden;
-  width: auto;
-}
-
-.portfolioItem {
-  float: left;
-  margin: 0 15px 15px 0;
-  padding: 15px 15px 5px;
-  border: 1px solid #cccccc;
-  overflow: hidden;
-}
-
-.portfolioItem img {
-  width: 215px;
-}
-
-.portfolioItem p {
-  width: 200px;
-  font-size: 10px;
-  padding-top: 5px;
-}
-
-/* PORTFOLIO DETAIL */
-#portfolioDetail {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  left: 100%;
-}
-
-#portfolioDetailContent {
-  height: 340px;
-  position: relative;
-  top: 50%;
-  margin: -170px 10px 0;
-  width: 20000px;
-}
-
-#portfolioItemDetails {
-  width: 300px;
-  height: 320px;
-  padding: 20px;
-  background-color: #fff;
-  float: left;
-}
-
-#detailNav {
-  overflow: auto;
-  width: auto;
-  background-color: #000;
-  padding: 10px;
-}
-
-#closePortfolioDetail {
-  float: left;
-  display: block;
-  background: url("/img/site/close_x.gif") no-repeat;
-  width: 30px;
-  height: 23px;
-  border-right: 1px solid #666666;
-}
-
-#closePortfolioDetail:hover {
-  border-right: 1px solid white;
-}
-
-#detailType {
-  float: left;
-  color: #b6b6b6;
-  font-family: DinAlternateLight;
-  font-size: 26px;
-  padding-left: 10px;
-  padding-top: 2px;
-}
-
-#detailNavLastNext {
-  float: right;
-  overflow: auto;
-  width: auto;
-}
-
-#detailNavLastNext a {
-  display: block;
-  float: left;
-  width: 23px;
-  height: 23px;
-}
-
-#detailLast {
-  background: url("/img/site/arrow_left.gif") center center no-repeat;
-  border-right: 1px solid #666666;
-  margin-right: 10px;
-}
-
-#detailLast:hover {
-  border-right: 1px solid white;
-}
-
-#detailNext {
-  background: url("/img/site/arrow_right.gif") center center no-repeat;
-  border-left: 1px solid #666666;
-}
-
-#detailNext:hover {
-  border-left: 1px solid white;
-}
-
-#detailDescription {
-  overflow: hidden;
-}
-
-#detailDescription h5 {
-  padding-top: 5px;
-  width: 1000px;
-  font-size: 26px;
-}
-
-#detailDescription p {
-  font-size: 13px;
-  line-height: 18px;
-  padding-top: 3px;
-}
-
-#detailDescription p#viewsTitle {
-  font-size: 11px;
-  padding-top: 10px;
-}
-
-#showPortfolioImage {
-  overflow: auto;
-  width: auto;
-}
-
-#showPortfolioImage li {
-  float: left;
-  border-left: 1px solid #cccccc;
-  padding: 10px;
-}
-
-#showPortfolioImage a:hover {
-  color: #b6b6b6;
-}
-
-#visitWebsite {
-  background: url("/img/site/arrow_right_black.gif") 0 center no-repeat;
-  padding: 10px 10px 10px 20px;
-}
-
-#visitWebsite:hover {
-  color: #b6b6b6;
-}
-
-/* PORTFOLIO DETAIL IMAGES */
-#portfolioDetailImageWrapper {
-  float: left;
-  overflow: hidden;
-}
-
-#portfolioDetailImages {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolioDetailImage {
-  background-color: #fff;
-  padding: 20px;
-  float: left;
-  margin-left: 10px;
-  height: 320px;
-  width: 466px;
-}
-
-.portfolioDetailImage img {
-  height: 320px;
-}
-
-@media only screen and (max-width: 480px) {
-  /* adjust detail view */
-  #portfolioDetail {
-    height: auto;
-    overflow: visible;
-  }
-
-  #portfolioDetailContent {
-    height: auto;
-    top: 0;
-    margin: 10px 10px 0;
-    width: 100%;
-  }
-
-  #portfolioItemDetails {
-    float: none;
-    height1: 300px;
-    padding: 20px 20px 0 20px;
-  }
-
-  #portfolioDetailImageWrapper {
-    float: none;
-    height: 225px;
-    width: 340px;
-  }
-
-  #portfolioDetailImages {
-    width: 20000px;
-  }
-
-  .portfolioDetailImage {
-    margin-left: 0;
-    width: 300px;
-    padding: 0 20px 20px 20px;
-  }
-
-  .portfolioDetailImage img {
-    height: auto;
-    width: 300px;
-  }
-}
-@media only screen and (max-width: 340px) {
-  /* adjust detail view */
-  #detailDescription p {
-    font-size: 11px !important;
-    line-height: 16px;
-  }
-
-  #portfolioItemDetails {
-    width: 280px;
-    height: 280px;
-  }
-
-  #portfolioItemDetails {
-    padding: 10px 10px 0 10px;
-  }
-
-  #portfolioDetailImageWrapper {
-    width: 300px;
-  }
-
-  .portfolioDetailImage {
-    padding: 0 10px 5px 10px;
-  }
-
-  .portfolioDetailImage {
-    height: 197px;
-    width: 280px;
-  }
-
-  .portfolioDetailImage img {
-    width: 280px;
-  }
-}
-/* CONTACT */
-input, textarea {
-  display: block;
-  border: 0;
-  border-bottom: 1px dotted black;
-  width: 100%;
-  font-size: 18px;
-  padding: 5px 0;
-}
-
-textarea {
-  height: 140px;
-}
-
-.fieldError {
-  border-left: 1px solid #ff6f6f;
-}
-
-#msgstatus {
-  padding: 10px 0;
-  display: none;
-  color: #ff6f6f;
-}
-
-#submitMessage {
-  font-size: 12px;
-  display: block;
-  color: #fff;
-  background-color: #000;
-  padding: 5px 10px;
-  border: 0;
-  margin-top: 10px;
-}
-
-#submitMessage:hover {
-  display: block;
-  color: #333333;
-  background-color: #ff6f6f;
-}
-
-.address {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 12px;
-  color: #333333;
-  margin-top: 10px;
-}
-
-/* FOOTER */
-footer {
-  overflow: auto;
-  width: auto;
-}
-
-footer p {
-  margin: 20px 0;
-  float: left;
-  color: #fff;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 12px;
-  background-color: #000;
-  padding: 10px;
-}
-
-.ir {
-  display: block;
-  text-indent: -999em;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  text-align: left;
-  direction: ltr;
-}
-
-.hidden {
-  display: none;
-  visibility: hidden;
-}
-
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto;
-}
-
-.invisible {
-  visibility: hidden;
-}
-
-.clearfix:before, .clearfix:after {
-  content: "\0020";
-  display: block;
-  height: 0;
-  overflow: hidden;
-}
-
-.clearfix:after {
-  clear: both;
-}
-
-.clearfix {
-  zoom: 1;
-}
-
-@media print {
-  * {
-    background: transparent !important;
-    color: black !important;
-    text-shadow: none !important;
-    filter: none !important;
-    -ms-filter: none !important;
-  }
-
-  a, a:visited {
-    color: #444444 !important;
-    text-decoration: underline;
-  }
-
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
-
-  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after {
-    content: "";
-  }
-
-  pre, blockquote {
-    border: 1px solid #999999;
-    page-break-inside: avoid;
-  }
-
-  thead {
-    display: table-header-group;
-  }
-
-  tr, img {
-    page-break-inside: avoid;
-  }
-
-  @page {
-    margin: 0.5cm;
-}
-
-  p, h2, h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2, h3 {
-    page-break-after: avoid;
-  }
-}
