--- a/src/components/Website/SliderNav/styles.scss
+++ b/src/components/Website/SliderNav/styles.scss
@@ -17,7 +17,7 @@
 
 #lastSection {
   height: 25px;
-  background: url('/src/assets/img/site/arrow_up.gif') center center no-repeat;
+  background: url('../../../assets/img/site/arrow_up.gif') center center no-repeat;
 }
 
 #topSection {
@@ -32,5 +32,5 @@
 
 #nextSection {
   height: 25px;
-  background: url('/src/assets/img/site/arrow_down.gif') center center no-repeat;
+  background: url('../../../assets/img/site/arrow_down.gif') center center no-repeat;
 }
