--- a/src/components/Website/Portfolio/List/styles.scss
+++ b/src/components/Website/Portfolio/List/styles.scss
@@ -1,8 +1,6 @@
-#portfolioList {
-  padding: 10px;
-  h1 {
-    font-size: 16;
-    text-transform: uppercase;
-    padding-bottom: 10px;
-  }
+#portfolioThumbnail {
+  padding-top: 20px;
+  overflow: hidden;
+  width: auto;
 }
+
