--- a/src/components/Website/Portfolio/Nav/styles.scss
+++ b/src/components/Website/Portfolio/Nav/styles.scss
@@ -1,11 +1,22 @@
-.portfolioNav {
-  padding: 10px;
-  margin: 10px;
-  border: 1px solid #ccc;
-  background: #dfdfdf;
+#portfolioNav {
+  padding-left: 7.5px;
 
   li {
-    margin-right: 10px;
-    display: inline-block;
+    float: left;
+    margin-left: 10px;
+    display: block;
+    color: #fff;
+    font-size: 11px;
+    background-color: #000;
+    padding: 5px 10px;
+  }
+  
+  li:first-child {
+    margin-left: 0;
+  }
+  
+  li:hover {
+    color: #333333;
+    background-color: #ff6f6f;
   }
 }
