--- a/src/components/Website/Header/styles.scss
+++ b/src/components/Website/Header/styles.scss
@@ -47,35 +47,6 @@ nav li a:hover {
   position: relative;
 }
 
-@-webkit-keyframes slideup {
-  0% {
-    top: 200px;
-  }
-
-  100% {
-    top: 0;
-  }
-}
-
-@-moz-keyframes slideup {
-  0% {
-    top: 200px;
-  }
-
-  100% {
-    top: 0;
-  }
-}
-
-@-o-keyframes slideup {
-  0% {
-    top: 200px;
-  }
-
-  100% {
-    top: 0;
-  }
-}
 
 @keyframes slideup {
   0% {
@@ -87,33 +58,14 @@ nav li a:hover {
   }
 }
 
-.cssanimations #logo {
+#logo {
   width: 100%;
   max-width: 647px;
   position: relative;
   top: 200px;
-  -webkit-animation-delay: 1s;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-name: slideup;
-  -webkit-animation-timing-function: ease;
-  -webkit-animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
-  -moz-animation-delay: 1s;
-  -moz-animation-duration: 1s;
-  -moz-animation-name: slideup;
-  -moz-animation-timing-function: ease;
-  -moz-animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
-  -o-animation-delay: 1s;
-  -o-animation-duration: 1s;
-  -o-animation-name: slideup;
-  -o-animation-timing-function: ease;
-  -o-animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
-  animation-delay: 1s;
-  animation-duration: 1s;
+  animation-delay: .5s;
+  animation-duration: 1.5s;
   animation-name: slideup;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
-  /* this prevents the animation from restarting! */
 }
