--- a/src/components/Admin/styles.scss
+++ b/src/components/Admin/styles.scss
@@ -2,7 +2,8 @@ body, p, span, a, textarea {
   font-family: Tahoma, Geneva, sans-serif;
   color: #333333;
   font-size: 14px;
-  letter-spacing: 1px;
+  letter-spacing: .1em;
   line-height: 20px;
 }
+
 
