--- a/src/admin.scss
+++ b/src/admin.scss
@@ -1,2 +1,20 @@
 @import 'sass/normalize';
 
+.inValidField {
+  border: 1px solid #f00;
+}
+
+input, select, textarea {
+  border: 1px solid #ccc;
+  padding: 5px 8px;
+}
+
+label {
+  display: block;
+  font-size: 12px;
+  color: #666;
+  margin-bottom: 3px;
+  line-height: 16px;
+  letter-spacing: 1px;
+}
+
