--- a/src/components/Admin/List/Filter/styles.scss
+++ b/src/components/Admin/List/Filter/styles.scss
@@ -1,29 +1,29 @@
-#adminList {
+#adminList #filterNav {
+  border: 1px solid #ccc;
+  border-top: 0;
+  position: relative;
+  padding: 10px;
+  margin-bottom: 10px;
+  background: #f0f0f0;
 
-  &__nav {
-    border: 1px solid #ccc;
-    position: relative;
-    padding: 10px;
-    margin-bottom: 20px;
+  & > div {
+    display: inline-block;
+    width: 25%;
+    border-left: 1px solid #ccc;
+    text-align: center;
   }
 
-  &__archiveNav {
-    margin-left: 50px;
-    display: inline-block;
-    input {
-      display: inline-block;
-      margin-left: 20px;
-    }
+  & > div:first-child {
+    border-left: 0;
   }
 
-  &__typenav {
-    display: inline-block;
-
+  &__selectType {
     ul {
       display: inline-block;
     }
 
     li {
+      color: #999;
       position: relative;
       display: inline-block;
       padding-left: 20px;
@@ -31,7 +31,8 @@
     }
 
     li.selected {
-      color: #ccc;
+      cursor: auto;
+      color: #444;
     }
 
     li:after {
@@ -43,6 +44,19 @@
     li:first-child:after {
       content: '';
     }
+  }
+
+  &__setDisplayArchived {
+    input {
+      display: inline-block;
+      margin-left: 20px;
+    }
+  }
+
+  &__selectPage {
+  }
+
+  &__selectItemsPerPage {
   }
 
 
