--- a/src/components/Admin/Add/Form/styles.scss
+++ b/src/components/Admin/Add/Form/styles.scss
@@ -1,3 +1,34 @@
+[draggable] {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+}
+
+#dragSorter {
+  list-style-type: none;
+  padding: 10px 0;
+
+  .dragElement {
+    width: 200px;
+    margin: 10px 0;
+    cursor: move;
+
+    img {
+      width: 100%;
+    }
+  }
+  .dragElement.onDrag {
+    opacity: 0.4;
+  }
+}
+
+
+
+
+
 .portfolioForm {
   padding: 15px;
   background-color: #f2f2f2;
