added remove and resort images to add and edit

--- a/src/components/Admin/Edit/styles.scss
+++ b/src/components/Admin/Edit/styles.scss
@@ -37,7 +37,7 @@
     }
   }
 
-  ul.listItems li {
+  ul.listItems > li {
       border: 1px solid #ccc;
       border-top: 0;
       padding: 10px 0;
